--- a/Pear/Controllers/Onboarding/Get Started Flow/Full Profile Review Page/GetStartedProfileReviewViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Full Profile Review Page/GetStartedProfileReviewViewController.storyboard
@@ -38,6 +38,9 @@
                                     <constraint firstAttribute="width" secondItem="XU8-ea-pRY" secondAttribute="height" multiplier="288:111" id="mgv-NV-Ptr"/>
                                 </constraints>
                                 <state key="normal" image="onboarding-button-continue"/>
+                                <connections>
+                                    <action selector="continueButtonClicked:" destination="CMh-cE-ChU" eventType="touchUpInside" id="DQn-Jo-hwc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
