--- a/Pear/Controllers/Onboarding/Get Started Flow/Notify Friend/GettingStartedNotifyFriendViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Notify Friend/GettingStartedNotifyFriendViewController.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="width" constant="80" id="pbJ-C1-AgF"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ready to send it?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csj-7f-abb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ready to send it?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csj-7f-abb">
                                 <rect key="frame" x="16" y="124" width="206" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
@@ -43,7 +43,7 @@
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztU-44-z9D">
                                 <rect key="frame" x="16" y="165.5" width="343" height="76.5"/>
-                                <string key="text">All profiles must be approved before appearing on Pear. They will be able to see your responses, edit photos,  update basic info, and approve the profile.</string>
+                                <string key="text">All profiles must be approved before appearing on Pear. They will be able to see your responses, edit photos, update basic info, and approve the profile.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
