--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bP-dS-bgj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="455"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
                                 <rect key="frame" x="160" y="478" width="55" height="37"/>
@@ -52,7 +52,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7bP-dS-bgj" firstAttribute="top" secondItem="im2-tZ-rGb" secondAttribute="top" id="5CF-Ta-ZpN"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="ABd-GM-PR1"/>
                             <constraint firstItem="s0e-kO-oji" firstAttribute="top" secondItem="5aE-wz-PXH" secondAttribute="bottom" id="Cid-Xi-FPr"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="BhD-Vv-GXK" secondAttribute="trailing" constant="20" id="FeQ-io-NXI"/>
@@ -64,6 +63,7 @@
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="fmI-fe-gxa"/>
                             <constraint firstItem="7bP-dS-bgj" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="ina-sy-lM7"/>
                             <constraint firstItem="5aE-wz-PXH" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="jUV-1W-Vdd"/>
+                            <constraint firstItem="7bP-dS-bgj" firstAttribute="top" secondItem="PoT-HI-Elf" secondAttribute="top" id="jzx-VK-e20"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="BhD-Vv-GXK" secondAttribute="trailing" constant="20" id="pKS-WT-LVI"/>
                             <constraint firstItem="s0e-kO-oji" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="pfH-Tx-hKo"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="z4a-MU-Xqo"/>
