--- a/Pear/Controllers/Onboarding/Get Started Flow/Pick User Provider Screen/GetStartedCreateAccountViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Pick User Provider Screen/GetStartedCreateAccountViewController.storyboard
@@ -30,13 +30,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Let's make this official!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fL0-bJ-2JN">
-                                <rect key="frame" x="30" y="100" width="315" height="28"/>
+                                <rect key="frame" x="30" y="80" width="315" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Create an account to save and continue the profile you've started. You can also: " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A9L-qJ-eoa">
-                                <rect key="frame" x="40" y="144" width="295" height="38.5"/>
+                                <rect key="frame" x="40" y="120" width="295" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -59,22 +59,23 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-other-things-to-do" translatesAutoresizingMaskIntoConstraints="NO" id="dJh-Zt-EeW">
-                                <rect key="frame" x="60" y="192.5" width="255" height="244"/>
+                                <rect key="frame" x="60" y="168.5" width="255" height="307"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Vkw-ec-uml" firstAttribute="bottom" secondItem="FO4-aE-yJW" secondAttribute="bottom" constant="60" id="1KP-34-zae"/>
                             <constraint firstItem="FO4-aE-yJW" firstAttribute="leading" secondItem="Vkw-ec-uml" secondAttribute="leading" constant="16" id="2PA-wI-zQ3"/>
+                            <constraint firstItem="SNz-BR-aD3" firstAttribute="top" secondItem="dJh-Zt-EeW" secondAttribute="bottom" constant="10" id="H30-rJ-6sj"/>
                             <constraint firstItem="A9L-qJ-eoa" firstAttribute="leading" secondItem="Vkw-ec-uml" secondAttribute="leading" constant="40" id="IhT-IT-ndR"/>
                             <constraint firstItem="SNz-BR-aD3" firstAttribute="centerX" secondItem="FO4-aE-yJW" secondAttribute="centerX" id="J1A-w5-CnQ"/>
                             <constraint firstItem="A9L-qJ-eoa" firstAttribute="centerX" secondItem="Vkw-ec-uml" secondAttribute="centerX" id="LFy-nh-fHQ"/>
                             <constraint firstItem="dJh-Zt-EeW" firstAttribute="leading" secondItem="ZbJ-1b-acQ" secondAttribute="leading" constant="60" id="M23-at-fiz"/>
                             <constraint firstItem="Vkw-ec-uml" firstAttribute="trailing" secondItem="fL0-bJ-2JN" secondAttribute="trailing" constant="30" id="Pyp-mB-UiN"/>
                             <constraint firstItem="fL0-bJ-2JN" firstAttribute="leading" secondItem="Vkw-ec-uml" secondAttribute="leading" constant="30" id="SUz-N6-M61"/>
-                            <constraint firstItem="A9L-qJ-eoa" firstAttribute="top" secondItem="fL0-bJ-2JN" secondAttribute="bottom" constant="16" id="Wru-LI-i7m"/>
+                            <constraint firstItem="A9L-qJ-eoa" firstAttribute="top" secondItem="fL0-bJ-2JN" secondAttribute="bottom" constant="12" id="Wru-LI-i7m"/>
                             <constraint firstItem="SNz-BR-aD3" firstAttribute="width" secondItem="FO4-aE-yJW" secondAttribute="width" id="Ws2-Tk-fGn"/>
-                            <constraint firstItem="fL0-bJ-2JN" firstAttribute="top" secondItem="kT5-tj-M8v" secondAttribute="bottom" constant="20" id="X9S-bh-LoP"/>
+                            <constraint firstItem="fL0-bJ-2JN" firstAttribute="top" secondItem="kT5-tj-M8v" secondAttribute="bottom" id="X9S-bh-LoP"/>
                             <constraint firstItem="SNz-BR-aD3" firstAttribute="height" secondItem="FO4-aE-yJW" secondAttribute="height" id="Z5e-i7-w42"/>
                             <constraint firstItem="FO4-aE-yJW" firstAttribute="centerX" secondItem="Vkw-ec-uml" secondAttribute="centerX" id="cg4-Qn-Cfu"/>
                             <constraint firstItem="fL0-bJ-2JN" firstAttribute="centerX" secondItem="Vkw-ec-uml" secondAttribute="centerX" id="dob-LM-pIh"/>
